[gd_scene load_steps=22 format=3 uid="uid://ctuvjhtjudv4e"]

[ext_resource type="PackedScene" path="res://Source/Background/Background.tscn" id="1"]
[ext_resource type="PackedScene" path="res://Source/Main/Menu.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://dnjo53fgjt7cw" path="res://Assets/Fonts/no_virus/No Virus.ttf" id="3"]
[ext_resource type="Script" path="res://Source/Main/Main.gd" id="4"]
[ext_resource type="PackedScene" path="res://Source/Gameplay/Map/Map.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://dca8xmwffi1cw" path="res://Assets/Graphics/Textures/old_paper.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c36lbshc7wjqp" path="res://Assets/Graphics/Icons/reset_icons/reset_focused.png" id="7"]
[ext_resource type="Texture2D" uid="uid://doal870p6p6ry" path="res://Assets/Graphics/Icons/reset_icons/reset_hover.png" id="8"]
[ext_resource type="Texture2D" uid="uid://c865awnh8f022" path="res://Assets/Graphics/Icons/reset_icons/reset_normal.png" id="10"]
[ext_resource type="Texture2D" uid="uid://ilrgndruhxdr" path="res://Assets/Graphics/Icons/reset_icons/reset_disabled.png" id="11"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.360784, 0.360784, 0.360784, 0.607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.360784, 0.360784, 0.360784, 0.607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("3")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.360784, 0.360784, 0.360784, 0.607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.360784, 0.360784, 0.360784, 0.607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.360784, 0.360784, 0.360784, 0.607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0.360784, 0.360784, 0.360784, 0.607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0.360784, 0.360784, 0.360784, 0.607843)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("3")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="Background" parent="." instance=ExtResource("1")]

[node name="ColorRect" parent="Background" index="0"]
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.670588, 0.878431, 1)

[node name="TextureRect" parent="Background" index="1"]
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Map" parent="." instance=ExtResource("5")]
anchors_preset = 0

[node name="Image" parent="Map" index="0"]
layout_mode = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 1152.0
expand_mode = 1

[node name="Overlay" parent="Map" index="1"]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="MenuBorder" type="TextureRect" parent="."]
self_modulate = Color(0.360784, 0.360784, 0.360784, 0.607843)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -58.0
offset_right = 125.0
offset_bottom = 262.0
texture = ExtResource("6")
expand_mode = 1

[node name="Menu" parent="MenuBorder" instance=ExtResource("2")]
layout_mode = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="HeadingBorder" type="TextureRect" parent="."]
self_modulate = Color(0.360784, 0.360784, 0.360784, 0.607843)
layout_mode = 0
offset_left = 407.753
offset_top = 81.357
offset_right = 859.753
offset_bottom = 197.357
texture = ExtResource("6")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HeadingBorder"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginMid1" type="ColorRect" parent="HeadingBorder/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Heading" type="Label" parent="HeadingBorder/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("1")
text = "Conquest"

[node name="MarginMid2" type="ColorRect" parent="HeadingBorder/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Server" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -142.0
offset_right = 225.0
offset_bottom = -82.0

[node name="IP" type="LineEdit" parent="Server"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("4")
theme_override_styles/normal = SubResource("3")
theme_override_styles/focus = SubResource("2")
theme_override_styles/read_only = SubResource("2")
text = "conquestgame.online"

[node name="Connect" type="Button" parent="Server"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_fonts/font = SubResource("10")
theme_override_styles/normal = SubResource("9")
theme_override_styles/hover = SubResource("5")
theme_override_styles/pressed = SubResource("6")
theme_override_styles/disabled = SubResource("8")
theme_override_styles/focus = SubResource("7")
text = "GO"

[node name="ResetIP" type="TextureButton" parent="Server"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("10")
texture_pressed = ExtResource("7")
texture_hover = ExtResource("8")
texture_disabled = ExtResource("11")
texture_focused = ExtResource("10")

[node name="Error" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -179.5
offset_top = -61.0
offset_right = 179.5
offset_bottom = -24.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.905882, 0.317647, 0.317647, 1)
theme_override_fonts/font = SubResource("11")
text = "SERVER NOT CONNECTED!"

[node name="Success" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -179.5
offset_top = -61.0
offset_right = 179.5
offset_bottom = -24.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.321569, 0.929412, 0.215686, 1)
theme_override_fonts/font = SubResource("11")
text = "SERVER CONNECTED!"

[connection signal="options_saved" from="MenuBorder/Menu" to="." method="options_saved"]
[connection signal="text_submitted" from="Server/IP" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Server/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Server/ResetIP" to="." method="_on_ResetIP_pressed"]

[editable path="Background"]
[editable path="Map"]
